--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -5,7 +5,9 @@
     <title>激活账号</title>
 </head>
 <body>
-您好,这是验证邮件,请点击下面的链接完成验证,
-<a href="#" th:href="@{http://132.232.89.108:8081/user/activate(email=${email})}">激活账号</a>。
+你好！
+您需要验证二手图书交换平台里的帐号邮箱地址 ，请点击链接进行确认：
+<a href="#" th:href="@{http://132.232.89.108:8081/user/activate(email=${email})}">click me</a>。
+若不是您本人的操作请忽略该邮件。
 </body>
 </html>
